# minidump-debugger

./: Cargo.toml  README.md  RELEASES.md  artifacts.json  changelog.rss  index.html  minidump-debugger-installer.ps1.txt  minidump-debugger-installer.sh.txt  oranda.json
.github/workflows/: release.yml  rust.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.1.1/: index.html
changelog/v0.2.0/: index.html
changelog/v0.2.0-prerelease1/: index.html
changelog/v0.2.0-prerelease4/: index.html
changelog/v0.2.1/: index.html
changelog/v0.2.1-prerelease3/: index.html
changelog/v0.2.1-prerelease4/: index.html
changelog/v0.2.2/: index.html
changelog/v0.3.0/: index.html
changelog/v0.3.1/: index.html
changelog/v0.3.2/: index.html
changelog/v0.3.3/: index.html
changelog/v0.3.4/: index.html
src/: logger.rs  main.rs  processor.rs  ui_logs.rs  ui_processed.rs  ui_raw_dump.rs  ui_settings.rs
wix/: main.wxs
