[package]
name = "minidump-debugger"
version = "0.1.0"
edition = "2021"
description = "an experimental GUI for inspecting minidumps with rust-minidump"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gankra/minidump-debugger"
keywords = ["minidump", "debugger", "rust-minidump"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18.0"
egui = "0.18.1"
egui_extras = "0.18.0"
memmap2 = "0.5.5"
minidump = "0.12.0"
minidump-common = "0.12.0"
minidump-processor = { version = "0.12.0", features = ["http", "dump_syms"] }
num-traits = "0.2.15"
rfd = "0.9.1"
tempfile = "3.3.0"
tokio = "1.20.0"
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = "0.3.14"
